--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,33 +9,18 @@
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <title>YAY</title>
     <h1> Hey,there </h1>
-    <body>
-<div>
-      <h1><a href="/">Django Girls Blog</a></h1>
-<div class="page-header">
-    <h1><a href="/">Django Girls Blog</a></h1>
-</div>
-    <div class="post">
-    <p>published: {{ post.published_date }}</p>
-    <h2><a href="">{{ post.title }}</a></h2>
-    <p>{{ post.text|linebreaksbr }}</p>
-</div>
-
-<div class="content container">
-    <div class="row">
-        <div class="col-md-8">
-            {% for post in posts %}
-                <div class="post">
-                    <div class="date">
-                        <p>published: {{ post.published_date }}</p>
-                    </div>
-                    <h2><a href="">{{ post.title }}</a></h2>
-                    <p>{{ post.text|linebreaksbr }}</p>
-                </div>
-            {% endfor %}
+<<body>
+    <div class="page-header">
+        <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+            {% block content %}
+            {% endblock %}
+            </div>
         </div>
     </div>
-</div><p> This is my first website </p>
 </body>
     <h2>I made it!!</h2>
 </head>
